# rust-comet

./: .gitignore  readme.md
1_display_variables/: Cargo.toml
1_display_variables/src/: main.rs
2_input_value/: Cargo.toml
2_input_value/src/: main.rs
3_conditionnal/: Cargo.toml
3_conditionnal/src/: main.rs
4_fibonacci/src/: main.rs
5_objects/: Cargo.toml
5_objects/src/: main.rs
6_objects_parsed/: Cargo.toml  accounts.json
6_objects_parsed/src/: main.rs
7_GUI/: tsconfig.app.json
7_GUI/comet/: package-lock.json
7_GUI/comet/src-tauri/: Cargo.toml  tauri.conf.json
7_GUI/comet/src-tauri/src/domain/accounts/: account.rs
7_GUI/comet/src-tauri/src/infra/accounts/: db_account_adapter.rs
7_GUI/comet/src-tauri/src/service/: account_port.rs
7_GUI/comet/src/app/infra/components/account-table/: account-table.component.html  (+1 more)
7_GUI/commet/: angular.json  package-lock.json  package.json
7_GUI/commet/src/: styles.scss
7_GUI/commet/src-tauri/src/: lib.rs  main.rs
7_GUI/commet/src-tauri/src/domain/accounts/: account.rs
7_GUI/commet/src-tauri/src/infra/accounts/: db_account_adapter.rs
7_GUI/commet/src-tauri/src/service/: account_service.rs  mod.rs
7_GUI/commet/src/app/: app.component.ts
7_GUI/commet/src/app/domain/: account.model.ts
7_GUI/commet/src/app/infra/pipe/: amount-sens.pipe.ts
7_GUI/commet/src/app/service/: account.service.ts
7_GUI/src-tauri/src/infra/accounts/: mod.rs
7_GUI/src/app/infra/components/init-data-button/: init-data-button.component.ts
7_GUI/src/app/infra/components/menu-extia/: menu-extia.component.ts
(+2 files in other folders)
